Test cleanup: Consumer ACK tests